image was too wide in portrait mode.  fixed width

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     align-items: center;
     display: flex;
     height: 100vh;
-    width: 100vh;
 }
 
 #menu-items {
